# ofp

./: .gitignore  CMakeLists.txt  package.xml  pyproject.toml
config/: ros_config.yaml
launch/: ofp_node.launch
nodes/: ofp_node.py
ofp/: ofp.py
scripts/: infer.py  train.py
