<?xml version="1.0"?>
<package format="2">
  <name>ofp_ros</name>
  <version>0.1.0</version>
  <description>OnlineFieldPerception traversability model</description>
  <maintainer email="mattschmittle@gmail.com">Schmittle</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
